# PhosGB

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
core/: APU.cpp  APU.h  APU.hpp  CMakeLists.txt  CPU.cpp  CPU.h  CPU.hpp  Common.h  Common.hpp  Emulator.cpp  Emulator.h  Emulator.hpp  GPU.cpp  GPU.h  GPU.hpp  Joypad.cpp  Joypad.h  Joypad.hpp  Logger.cpp  Logger.h  Logger.hpp  MBC.cpp  MBC.h  MBC.hpp  MMU.cpp  MMU.h  MMU.hpp  Serializer.h  Serializer.hpp
core/sound/: blip_buf.c  blip_buf.h
hak/: CMakeLists.txt  bit.hpp  serializer.hpp  types.hpp
libs/gl3w/: CMakeLists.txt
libs/glew/: CMakeLists.txt
libs/glew/GL/: glew.c
libs/imgui/: CMakeLists.txt  fetch.sh  imgui_impl_opengl3.h  imgui_memory_editor.h
phos-desktop/: CMakeLists.txt
phos-desktop/src/: DebugHost.cpp  DebugHost.h  Debugger.cpp  Debugger.h  DebuggerLog.cpp  DebuggerLog.h  Display.cpp  Display.h  FileBrowser.h  FileChooser.cpp  FileChooser.h  Host.cpp  IDisplay.cpp  IDisplay.h  Main.cpp  NormalHost.h
platform/android/app/: .gitignore  build.gradle
platform/android/app/jni/src/: Android.mk  Main.cpp  main.c
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
platform/android/app/src/main/java/org/miami/phos/: PhosActivity.java  SimpleFileChooser.java
platform/android/app/src/main/java/org/phos/phos/: PhosActivity.java  SimpleFileChooser.java
platform/android/app/src/main/res/layout/: joypad.xml
platform/android/app/src/main/res/values/: strings.xml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/emscripten/: .gitignore  CMakeLists.txt  Main.cpp  Makefile  shell_minimal.html
platform/imgui/: CMakeLists.txt
platform/imgui/libs/: CMakeLists.txt
platform/imgui/libs/lodepng/: CMakeLists.txt
platform/imgui/src/: DebugHost.cpp  DebugHost.h  DebugHost.hpp  DebugSink.cpp  DebugSink.h  DebugSink.hpp  FileBrowser.h  FileBrowser.hpp  Host.cpp  Host.h  Host.hpp  Main.cpp  MainEmscripten.cpp  MemoryEditor.hpp  NormalHost.cpp  NormalHost.hpp  Timer.cpp  Timer.hpp
platform/sdl/: CMakeLists.txt
platform/sdl/libs/imgui/: CMakeLists.txt
platform/sdl/src/: DebugHost.cpp  DebugSink.cpp  FileBrowser.h  NormalHost.cpp
src/: CMakeLists.txt  CPU.cpp  CPU.h  Common.h  Debugger.cpp  Debugger.h  Display.cpp  Display.h  Emulator.cpp  Emulator.h  GPU.cpp  GPU.h  IDisplay.cpp  IDisplay.h  Joypad.cpp  Joypad.h  MBC.cpp  MBC.h  MMU.cpp  MMU.h  Main.cpp  Timer.cpp  Timer.h  main.cpp
test/: CMakeLists.txt  CPUTest.cpp  TestMain.cpp  TestRunner.cpp
